Add in data binding for button type

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -2,30 +2,30 @@
   <h2>Button Component &lt;samButton&gt;</h2>
   <div class="usa-width-one-whole">
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'defaultBtn'" [buttonData]="'Default'" [buttonType]="'default'"></samButton>
+      <samButton [buttonId]="'defaultBtn'" [buttonText]="'Default'" [buttonType]="btnType" (click)="onDefaultBtnClick()"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'altBtn'" [buttonData]="'Alt'" [buttonType]="'alt'"></samButton>
+      <samButton [buttonId]="'altBtn'" [buttonText]="'Alt'" [buttonType]="'alt'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'secondaryBtn'" [buttonData]="'Secondary'" [buttonType]="'secondary'"></samButton>
+      <samButton [buttonId]="'secondaryBtn'" [buttonText]="'Secondary'" [buttonType]="'secondary'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'grayBtn'" [buttonData]="'Gray'" [buttonType]="'gray'"></samButton>
+      <samButton [buttonId]="'grayBtn'" [buttonText]="'Gray'" [buttonType]="'gray'"></samButton>
     </div>
   </div>
   <div class="usa-width-one-whole">
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'outlineBtn'" [buttonData]="'Outline'" [buttonType]="'outline'"></samButton>
+      <samButton [buttonId]="'outlineBtn'" [buttonText]="'Outline'" [buttonType]="'outline'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'invertedBtn'" [buttonData]="'Inverted'" [buttonType]="'inverted'"></samButton>
+      <samButton [buttonId]="'invertedBtn'" [buttonText]="'Inverted'" [buttonType]="'inverted'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'disabledBtn'" [buttonData]="'Disabled'" [buttonType]="'disabled'"></samButton>
+      <samButton [buttonId]="'disabledBtn'" [buttonText]="'Disabled'" [buttonType]="'disabled'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'bigBtn'" [buttonData]="'Big'" [buttonType]="'big'"></samButton>
+      <samButton [buttonId]="'bigBtn'" [buttonText]="'Big'" [buttonType]="'big'"></samButton>
     </div>
   </div>
   <h2>Select Component &lt;samSelect&gt;</h2>
