Add in accordions component
Remove the accordions component in samuikit, add in a new accordions
component under sam angular module with tests

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -1,4 +1,13 @@
 <div class="usa-grid">
+  <h2>Accordions Component &lt;samAccordions&gt;</h2>
+  <div class="usa-width-one-whole">
+    <h3>Accordions without border</h3>
+    <samAccordions [accordionsData]="accordionsData" [bordered]="false"></samAccordions>
+  </div>
+  <div class="usa-width-one-whole">
+    <h3>Accordions with border</h3>
+    <samAccordions [accordionsData]="accordionsData" [bordered]="true">></samAccordions>
+  </div>
   <h2>Select Component &lt;samSelect&gt;</h2>
   <div class="usa-width-one-third">
     <samSelect
