Update to resolve confusion caused by accordion id

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -2,11 +2,11 @@
   <h2>Accordions Component &lt;samAccordions&gt;</h2>
   <div class="usa-width-one-whole">
     <h3>Accordions without border</h3>
-    <samAccordions [accordionsData]="accordionsData" [bordered]="false"></samAccordions>
+    <samAccordions [accordionsName]="'noBorder'" [accordionsData]="accordionsData" [bordered]="false"></samAccordions>
   </div>
   <div class="usa-width-one-whole">
     <h3>Accordions with border</h3>
-    <samAccordions [accordionsData]="accordionsData" [bordered]="true">></samAccordions>
+    <samAccordions [accordionsName]="'bordered'" [accordionsData]="accordionsData" [bordered]="true">></samAccordions>
   </div>
 </div>
 <div class="usa-grid">
