--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -141,6 +141,7 @@
       [options]="radioConfig.options"
       [label]="radioConfig.label"
       [hint]="radioConfig.hint"
+      [name]="radioConfig.name"
       [errorMessage]="radioConfig.errorMessage">
     </samRadioButton>
   </div>
