ensure <samCheckbox> is 508 compliant or throw exception

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -98,6 +98,7 @@
   <div class="usa-width-one-third">
     <samCheckbox
       [(model)]="checkboxModel"
+      [name]="checkboxConfig.name"
       [options]="checkboxConfig.options"
       [label]="checkboxConfig.label"
       [hint]="checkboxConfig.hint"
