check for 508 compliance for the <samSelect> component

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -54,6 +54,7 @@
   <div class="usa-width-one-third">
     <samSelect
       [(model)]="selectModel"
+      [name]="selectConfig.name"
       [options]="selectConfig.options"
       [label]="selectConfig.label"
       [hint]="selectConfig.hint"
