--- a/src/ui-kit/form-controls/searchbar/searchbar.style.css
+++ b/src/ui-kit/form-controls/searchbar/searchbar.style.css
@@ -58,3 +58,22 @@
   max-width: 800px;
   width: 100%;
 }
+
+.reset-icon,.reset-icon-active{
+  position: absolute;;
+  top:20%;
+  right:10px;
+  z-index: 10;
+}
+
+.reset-icon{
+  color: #d9d9d9;
+}
+
+.reset-icon-active{
+  color: #777;
+}
+
+.reset-icon-active:hover{
+  cursor: pointer;
+}
