--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -205,7 +205,7 @@
             <span *ngIf="oProgram.data.application?.deadlines?.submission?.flag == 'no'">
               Not Applicable.
             </span>
-            <span *ngIf="oProgram.data.application?.deadlines?.submission?.flag == 'contactHQ'">
+            <span *ngIf="oProgram.data.application?.deadlines?.submission?.flag == 'contact'">
               Contact the headquarters or regional office, as appropriate for application deadlines
             </span>
       </p>
