--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -181,4 +181,8 @@
     <samAlert [type]="'infovv'" [title]="'Sample Title'" [description]="'lorem ipsum lorem ipsum lorem ipsum lorem ipsum.'"></samAlert>
   </div>
 </div>
+<div class="usa-grid">
+  <h2>Alert Component &lt;samAlertList&gt;</h2>
+  <samAlertList></samAlertList>
+</div>
 
