--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -156,26 +156,26 @@
 
       <h3>Applicant Eligibility:</h3>
 
-      <p *ngIf="oProgram">
-        {{oProgram.data.eligibility?.applicant?.additionalInfo?.content}}
-      </p>
-
-      <div *ngIf="oProgram && aDictionaries['applicant_types']" class="designation">
+      <div *ngIf="oProgram && oProgram.data && aDictionaries && aDictionaries['applicant_types']" class="designation">
         <h4>Designations</h4>
         <span *ngFor="let typeID of oProgram.data.eligibility?.applicant?.types; let isLast = last">{{lookupTypeByID('applicant_types', typeID)}}{{isLast ? '' : ', '}}</span>
       </div>
 
+      <p *ngIf="oProgram">
+        {{oProgram.data.eligibility?.applicant?.additionalInfo?.content}}
+      </p>
+
 
       <h3>Beneficiary Eligibility:</h3>
+
+      <div *ngIf="oProgram && oProgram.data && aDictionaries && aDictionaries['beneficiary_types']" class="designation">
+        <h4>Designations</h4>
+        <span *ngFor="let typeID of oProgram.data.eligibility?.beneficiary?.types; let isLast = last">{{lookupTypeByID('beneficiary_types', typeID)}}{{isLast ? '' : ', '}}</span>
+      </div>
 
       <p *ngIf="oProgram">
         {{oProgram.data.eligibility?.beneficiary?.additionalInfo?.content}}
       </p>
-
-      <div *ngIf="oProgram && aDictionaries['beneficiary_types']" class="designation">
-        <h4>Designations</h4>
-        <span *ngFor="let typeID of oProgram.data.eligibility?.beneficiary?.types; let isLast = last">{{lookupTypeByID('beneficiary_types', typeID)}}{{isLast ? '' : ', '}}</span>
-      </div>
 
 
       <h3>Length and Time Phasing of Assistance:</h3>
@@ -187,17 +187,17 @@
 
       <h3>Use of Assistance:</h3>
 
+      <div *ngIf="oProgram && oProgram.data && aDictionaries && aDictionaries['assistance_usage_types']" class="designation">
+        <h4>Designations</h4>
+        <span *ngFor="let typeID of oProgram.data.eligibility?.applicant?.assistanceUsageTypes; let isLast = last">{{lookupTypeByID('assistance_usage_types', typeID)}}{{isLast ? '' : ', '}}</span>
+      </div>
+
       <p *ngIf="oProgram">
         {{ oProgram.data.usage?.rules?.content }}
         <span *ngIf="oProgram.data.usage?.restrictions?.flag=='yes'">{{ oProgram.data.usage.restrictions.content }}</span>
         <span *ngIf="oProgram.data.usage?.discretionaryFund?.flag=='yes'">{{ oProgram.data.usage.discretionaryFund.content }}</span>
         <span *ngIf="oProgram.data.usage?.loanTerms?.flag=='yes'">{{ oProgram.data.usage.loanTerms.content }}</span>
       </p>
-
-      <div *ngIf="oProgram && aDictionaries['assistance_usage_types']" class="designation">
-        <h4>Designations</h4>
-        <span *ngFor="let typeID of oProgram.data.eligibility?.applicant?.assistanceUsageTypes; let isLast = last">{{lookupTypeByID('assistance_usage_types', typeID)}}{{isLast ? '' : ', '}}</span>
-      </div>
     </section>
 
     <!--How do I apply?-->
