--- a/src/app/app-components/alert-list/alert-list.template.html
+++ b/src/app/app-components/alert-list/alert-list.template.html
@@ -1,3 +1,7 @@
-<div *ngFor="let alert of alerts">
-  <samAlert [type]="alert.type" [title]="alert.title" [description]="alert.description" (dismiss)="onDismiss()" (expand)="onExpand()"></samAlert>
+<div *ngFor="let alert of alerts; let i=index">
+  <samAlert *ngIf="i===0" [type]="alert.type" [title]="alert.title" [description]="alert.description"
+            (dismiss)="onDismiss()" (expand)="onExpand()" [showDescription]="showDescriptions" [showLinks]="true">
+  </samAlert>
+  <samAlert *ngIf="i!==0" [type]="alert.type" [title]="alert.title" [description]="alert.description"
+            [showDescription]="showDescriptions" [showLinks]="false"></samAlert>
 </div>
