--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -1,3 +1,35 @@
+@import 'node_modules/samwds/src/stylesheets/all';
+
+//@import 'node_modules/uswds/src/stylesheets/all';
+//
+//// Vendor main -------------- //
+//@import 'node_modules/samwds/src/stylesheets/lib/font-awesome/font-awesome';
+//
+//// overrides core variables
+//@import 'node_modules/samwds/src/stylesheets/core/variables'; // override U.S. Web Design Standards defaults
+//
+//// SAMWDS Core additions and overrides -------------- //
+//@import 'node_modules/samwds/src/stylesheets/core/utilities';
+//@import 'node_modules/samwds/src/stylesheets/core/margin-padding';
+//@import 'node_modules/samwds/src/stylesheets/core/iae-global';
+//
+//// SAMWDS Elements additions and overrides -------------- //
+//@import 'node_modules/samwds/src/stylesheets/elements/buttons';
+//@import 'node_modules/samwds/src/stylesheets/elements/figure';
+//@import 'node_modules/samwds/src/stylesheets/elements/inputs';
+//@import 'node_modules/samwds/src/stylesheets/elements/typography';
+//
+//// SAMWDS Components additions and overrides -------- //
+//@import 'node_modules/samwds/src/stylesheets/components/accordions';
+//@import 'node_modules/samwds/src/stylesheets/components/actions';
+//@import 'node_modules/samwds/src/stylesheets/components/alerts';
+//@import 'node_modules/samwds/src/stylesheets/components/header';
+//@import 'node_modules/samwds/src/stylesheets/components/footer';
+//@import 'node_modules/samwds/src/stylesheets/components/search-result';
+//@import 'node_modules/samwds/src/stylesheets/components/navprimary';
+//@import 'node_modules/samwds/src/stylesheets/components/navsecondary';
+//@import 'node_modules/samwds/src/stylesheets/components/navside';
+
 html, body{
   height: 100%;
   /*font-family: Arial, Helvetica, sans-serif*/
