--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -24,7 +24,7 @@
 @import 'node_modules/samwds/src/stylesheets/components/actions';
 @import 'node_modules/samwds/src/stylesheets/components/alerts';
 @import 'node_modules/samwds/src/stylesheets/components/header';
-@import 'node_modules/samwds/src/stylesheets/components/footer';
+//@import 'node_modules/samwds/src/stylesheets/components/footer';
 @import 'node_modules/samwds/src/stylesheets/components/search-result';
 @import 'node_modules/samwds/src/stylesheets/components/navprimary';
 @import 'node_modules/samwds/src/stylesheets/components/navsecondary';
