--- a/src/ui-kit/footer/footer.scss
+++ b/src/ui-kit/footer/footer.scss
@@ -1,8 +1,13 @@
-//@import "~samwds/src/stylesheets/core/variables";
 @import "~uswds/src/stylesheets/all";
 
-.sam-footer-head{color: #fff}
-.sam-footer-links{font-size:13px}
+
+.sam-footer-head {
+  color: #fff;
+}
+
+.sam-footer-links {
+  font-size:13px;
+}
 
 .sam-footer-wrapper {
   width: 100%;
